--- a/style.css
+++ b/style.css
@@ -11,12 +11,16 @@
     margin: 0 auto;
     padding: 0 20px;
     max-width: 1470px;
+    height: 100%;
+}
+
+body {
+    background-color: #000;
 }
 
 .main {
-    background-color: #000;
     height: 100vh;
-    width: 100vw;
+    padding: 20px;
 }
 
 .title {
@@ -26,7 +30,7 @@
 
 .wrapper {
     display: flex;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     align-items: center;
     justify-content: center;
@@ -86,4 +90,10 @@
     flex-basis: 100%;
     text-align: center;
     text-transform: uppercase;
+}
+
+@media (max-width: 595px) {
+    .main {
+        height: auto;
+    }
 }
